--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.7.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.16.0",
+    "framer-motion": "^11.16.1",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.4",
     "react": "^19.0.0",
